[build-system]
requires = ["setuptools >= 64", "setuptools-scm>=8.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "bluepymm"
authors = [
    {name = "Blue Brain Project, EPFL", email = "werner.vangeit@epfl.ch"},
]
description="Model Management Python Library (bluepymm)"
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "sh",
    "bluepyopt",
    "matplotlib",
    "pandas>=2.0.0",
    "numpy",
    "ipyparallel",
    "lxml",
    "h5py",
    "pyyaml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
keywords = [
    "optimisation",
    "neuroscience",
    "BlueBrainProject"
]

[project.urls]
Homepage = "https://github.com/BlueBrain/BluePyMM"
Source = "https://github.com/BlueBrain/BluePyMM"
Repository = "https://github.com/BlueBrain/BluePyMM.git"
Tracker = "https://github.com/BlueBrain/BluePyMM/issues"
Documentation = "https://bluepymm.readthedocs.io/en/latest"

[project.scripts]
bluepymm = "bluepymm:main.main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bluepymm = [
    "templates/cell_template_neuron.jinja2",
    "templates/cell_template_neurodamus.jinja2",
    "templates/cell_template_neurodamus_sbo.jinja2",
]

[tool.setuptools.packages.find]
exclude = ["notebook", "tests",]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
